[gd_scene load_steps=6 format=3 uid="uid://dresjlxwqlxkx"]

[ext_resource type="PackedScene" uid="uid://dkk7wmldv8pa0" path="res://scenes/maid.tscn" id="1_88gup"]
[ext_resource type="Script" uid="uid://15ss4u2euebk" path="res://scripts/main.gd" id="1_bisa2"]
[ext_resource type="PackedScene" uid="uid://bjiwn255sl2hg" path="res://scenes/ui.tscn" id="3_85yof"]
[ext_resource type="PackedScene" uid="uid://dmwgf3fpnfigc" path="res://scenes/master.tscn" id="4_jyhfs"]
[ext_resource type="PackedScene" uid="uid://wiukdtsljhbm" path="res://scenes/room.tscn" id="5_tbgi4"]

[node name="Main" type="Node2D"]
script = ExtResource("1_bisa2")

[node name="Master" parent="." instance=ExtResource("4_jyhfs")]
position = Vector2(132, 61)

[node name="Maid" parent="." instance=ExtResource("1_88gup")]
y_sort_enabled = true
position = Vector2(139, 120)

[node name="AnimatedSprite2D" parent="Maid" index="0"]
animation = &"walk6"

[node name="Dig Power" parent="Maid" index="5"]
offset_left = 9.0
offset_top = -18.0
offset_right = 24.0
offset_bottom = -2.0

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
visible = false
offset_left = -123.0
offset_top = -114.0
offset_right = 436.0
offset_bottom = 535.0
color = Color(0, 0, 0, 0)

[node name="Control" parent="CanvasLayer" instance=ExtResource("3_85yof")]
metadata/_edit_use_anchors_ = true

[node name="Thewatch" parent="CanvasLayer/Control" index="0"]
visible = false

[node name="Time Label" parent="CanvasLayer/Control" index="1"]
visible = false

[node name="Timer" parent="CanvasLayer/Control/Time Label" index="0"]
wait_time = 60.0
one_shot = true

[node name="Item Count" parent="CanvasLayer/Control" index="2"]
visible = false

[node name="Dig Time" parent="CanvasLayer/Control" index="4"]
visible = false
offset_left = 81.0
offset_top = 73.0
offset_right = 183.0
offset_bottom = 159.0

[node name="Found Items" parent="CanvasLayer/Control" index="5"]
offset_left = 62.0
offset_top = 94.0
offset_right = 205.0
offset_bottom = 144.0

[node name="Warmth2" parent="CanvasLayer/Control" index="6"]
visible = false

[node name="Room" parent="." instance=ExtResource("5_tbgi4")]
z_index = -1
position = Vector2(136, 116)

[connection signal="call_it_off" from="Maid" to="." method="_on_call_it_off"]
[connection signal="digging_item" from="Maid" to="." method="_on_maid_digging_item"]
[connection signal="is_digging" from="Maid" to="." method="_on_maid_is_digging"]
[connection signal="timeout" from="Maid/Timer" to="." method="_on_maid_timer_timeout"]
[connection signal="timeout" from="CanvasLayer/Control/Time Label/Timer" to="." method="_on_timer_timeout"]

[editable path="Maid"]
[editable path="CanvasLayer/Control"]
